--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
-    <string name="app_name">Lab 6 - Starter - Weather Forecast</string>
-    <string name="web_service_url">http://api.openweathermap.org/data/2.5/forecast/daily?q=</string>
+    <string name="app_name">Homework 2 - Monopoly Players</string>
+    <string name="calvin_player_server">http://cs262.cs.calvin.edu:8089/monopoly/</string>
     <string name="openweather_api_key">8301442678d36413b4e3a04d016deee7</string>
     <string name="openweather_units">imperial</string>
     <string name="openweather_count">7</string>
-    <string name="city_value">Grand Rapids, MI</string>
     <string name="fetch_button_label">Fetch</string>
     <string name="connection_error">Failed to connect to service...</string>
     <string name="day_text">Day</string>
